--- a/input.html
+++ b/input.html
@@ -3,6 +3,13 @@
 <head>
 	<meta charset="utf-8" />
 	<title> input </title>
+	<script>
+		function getName(){
+			var fullName;
+			fullName = document.getElementById("first").value;
+			document.getElementById("message").innerHTML = fullName;
+		}
+	</script>
 </head>
 <body lang="en-US">
 	<input type="text" id=first>
