output displays both the first and last name

--- a/input.html
+++ b/input.html
@@ -6,7 +6,11 @@
 	<script>
 		function getName(){
 			var fullName;
-			fullName = document.getElementById("first").value;
+			var first;
+			var last;
+			first = document.getElementById("first").value;
+			last = document.getElementById("last").value;
+			fullName = first + last
 			document.getElementById("message").innerHTML = fullName;
 		}
 	</script>
@@ -15,7 +19,7 @@
 	<input type="text" id=first>
 	<input type="text" id=last>
 	<button type="button" id=doneButton onclick="getName();">Done</button>
-	<p id="message">message</p>
+	<p id="message"></p>
 				
 </body>
 </hmtl>
