--- a/input.html
+++ b/input.html
@@ -10,7 +10,7 @@
 			var last;
 			first = document.getElementById("first").value;
 			last = document.getElementById("last").value;
-			fullName = first + last
+			fullName = first + " " + last;
 			document.getElementById("message").innerHTML = fullName;
 		}
 	</script>
